# remote-driving-platform

./: CMakeLists.txt
include/: networking.h  telemetry.h  video_capture.h  video_streaming.h
src/: main.cpp  networking.cpp  telemetry.cpp  video_capture.cpp  video_streaming.cpp
